terminated social links

--- a/link-error.html
+++ b/link-error.html
@@ -4,11 +4,11 @@
 <meta name="viewport" content="width=device-width,initial-scale=1.0">
 <meta charset="utf-8">
 <title>Let's Connect</title>
-<link-error.html rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-<link-error.html href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
- <link-error.html rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css"/>
-<link-error.html rel="stylesheet" href="link-error.html-error.css">
-<link-error.html rel="shortcut icon" type="image/x-icon" href="images/tabicon.png" />
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+<link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+ <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css"/>
+<link rel="stylesheet" href="link-error.css">
+<link rel="shortcut icon" type="image/x-icon" href="images/tabicon.png" />
 
 </head>
 <body data-spy="scroll" data-target=".navbar" data-offset="50">
@@ -23,17 +23,17 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav ml-lg-auto">
       <li class="nav-item">
-        <a class="nav-link-error.html" href="https://theevilgeniux.github.io/">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="https://theevilgeniux.github.io/">Home <span class="sr-only">(current)</span></a>
       </li>
 	  <li class="nav-item">
-        <a class="nav-link-error.html" href="#categories">Dashboard</a>
+        <a class="nav-link" href="#categories">Dashboard</a>
       </li>
 	        <li class="nav-item">
-        <a class="nav-link-error.html" href="#me">About me</a>
+        <a class="nav-link" href="#me">About me</a>
       </li>
 	  
 	   <li class="nav-item">
-        <a class="nav-link-error.html" href="#contact">Contact</a>
+        <a class="nav-link" href="#contact">Contact</a>
       </li>
     </ul>
   </div>
@@ -54,7 +54,7 @@
 <div class="container">
 <div class="headerText text-center">
 <h2 data-aos="fade-up" data-aos-duration="1000" data-aos-delay="0">Platforms</h2>
-<p class="paragraph" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="0">Connect with me on <b>link-error.htmledIn.</b> Share Ideas on my <b>Chat Room</b>. Like my <b>Page</b> and stay updated.</p></center>
+<p class="paragraph" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="0">Connect with me on <b>LinkedIn.</b> Share Ideas on my <b>Chat Room</b>. Like my <b>Page</b> and stay updated.</p></center>
 
 </div>
 <div class="row">
@@ -69,10 +69,10 @@
 <div class="col-sm-4">
 <div class="placeBox" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="0">
 <div class="imgBx">
-<img src="images/icons/link-error.htmled_in_alt.png" class="img-fluid">
+<img src="images/icons/Linked_in_alt.png" class="img-fluid">
 </div>
 <div class="content">
-<h3>link-error.htmledIn<br><span><a href="https://www.link-error.htmledin.com/in/evidence-maphutha-6766b9131/" class="specializes-url" target="_blank">myProfile</a></span></h3>
+<h3>LinkedIn<br><span><a href="https://www.linkedin.com/in/evidence-maphutha-6766b9131/" class="specializes-url" target="_blank">myProfile</a></span></h3>
 </div>
 </div>
 </div>
@@ -104,7 +104,7 @@
 <img src="images/icons/Github-icon.png" class="img-fluid">
 </div>
 <div class="content">
-<h3>GitHub<br><span><a href="https://github.com/theevilgeniux" class="specializes-url" target="_blank">Geniux</a></span></h3>
+<h3>GitHub<br><span><a href="https://github.com/theevilgeniux" class="specializes-url" target="_blank">EvilGeniux</a></span></h3>
 </div>
 </div>
 </div>
@@ -186,11 +186,11 @@ I created this Website to share solutions, tips and tricks to overcome issues yo
 <div class="row">
 <div class="col-sm-12">
 <ul class="sci">
-<li><a href="link-error.html-error.html" target="_blank"><i class="fa fa-facebook"></i></a></li><!--fontawesome icon-->
-<li><a href="link-error.html-error.html" target="_blank"><i class="fa fa-instagram"></i></a></li><!--fontawesome icon-->
+<li><a href="link-error.html" target="_blank"><i class="fa fa-facebook"></i></a></li><!--fontawesome icon-->
+<li><a href="link-error.html" target="_blank"><i class="fa fa-instagram"></i></a></li><!--fontawesome icon-->
 <li><a href="https://www.youtube.com/channel/UCSXkqnImiOzch4LJPLHe1Pw" target="_blank"><i class="fa fa-youtube-play" aria-hidden="true" style="color:#777"></i></a></li><!--fontawesome icon-->
 <li><a href="mailto:theevilgeniux@gmail.com" target="_top" target="_blank"><i class="fa fa-envelope" aria-hidden="true"></i></a></li><!--fontawesome icon-->
-<li><a href="https://www.link-error.htmledin.com/in/evidence-maphutha-6766b9131/" target="_blank"><i class="fa fa-link-error.htmledin"></i></a></li><!--fontawesome icon-->
+<li><a href="https://www.linkedin.com/in/evidence-maphutha-6766b9131/" target="_blank"><i class="fa fa-linkedin"></i></a></li><!--fontawesome icon-->
 
 </ul>
 <p class="cpryt">
