--- a/category-mobile-tech-support-utility-tools.html
+++ b/category-mobile-tech-support-utility-tools.html
@@ -117,7 +117,7 @@
 <b>Terms of Service</b><br/>
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
-<li/>Any feedback/queries: <a href="https://fb.me/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li>
+<li/>Any feedback/queries: <a href="link-error.html" target="_blank"><i class="fa fa-facebook"></i></a></li>
 <li>Dont forget to support <b>Geniux</b></li>
 </ul>
 </p>
@@ -325,7 +325,7 @@
 <b>Terms of Service</b><br/>
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
-<li/>Any feedback/queries: <a href="https://fb.me/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li>
+<li/>Any feedback/queries: <a href="link-error.html" target="_blank"><i class="fa fa-facebook"></i></a></li>
 <li>Dont forget to support <b>Geniux</b></li>
 </ul>
 </p>
@@ -463,7 +463,7 @@
 <b>Terms of Service</b><br/>
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
-<li/>Any feedback/queries: <a href="https://fb.me/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li>
+<li/>Any feedback/queries: <a href="link-error.html" target="_blank"><i class="fa fa-facebook"></i></a></li>
 <li>Dont forget to support <b>Geniux</b></li>
 </ul>
 </p>
@@ -532,7 +532,7 @@ How to Install :<br/>
 <b>Terms of Service</b><br/>
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
-<li/>Any feedback/queries: <a href="https://fb.me/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li>
+<li/>Any feedback/queries: <a href="link-error.html" target="_blank"><i class="fa fa-facebook"></i></a></li>
 <li>Dont forget to support <b>Geniux</b></li>
 </ul>
 </p>
@@ -588,7 +588,7 @@ GeniuXMusic APK <b>11.5MB</b> <br/>
 <b>Terms of Service</b><br/>
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
-<li/>Any feedback/queries: <a href="https://fb.me/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li>
+<li/>Any feedback/queries: <a href="link-error.html" target="_blank"><i class="fa fa-facebook"></i></a></li>
 <li>Dont forget to support <b>Geniux</b></li>
 </ul>
 </p>
@@ -651,7 +651,7 @@ XHAREit	 v3.8.18 APK: <b>6.5MB</b> <br/>
 <b>Terms of Service</b><br/>
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
-<li/>Any feedback/queries: <a href="https://fb.me/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li>
+<li/>Any feedback/queries: <a href="link-error.html" target="_blank"><i class="fa fa-facebook"></i></a></li>
 <li>Dont forget to support <b>Geniux</b></li>
 </ul>
 </p>
@@ -715,7 +715,7 @@ RootXplore Modded 4.2.1 APK: <b>3.7MB</b> <br/>
 <b>Terms of Service</b><br/>
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
-<li/>Any feedback/queries: <a href="https://fb.me/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li>
+<li/>Any feedback/queries: <a href="link-error.html" target="_blank"><i class="fa fa-facebook"></i></a></li>
 <li>Dont forget to support <b>Geniux</b></li>
 </ul>
 </p>
