--- a/category-windows-tricks-and-tips.html
+++ b/category-windows-tricks-and-tips.html
@@ -100,7 +100,7 @@
 <b>Terms of Service</b><br/>
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
-<li/>Any feedback/queries: <a href="https://fb.me/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li>
+<li/>Any feedback/queries: <a href="link-error.html" target="_blank"><i class="fa fa-facebook"></i></a></li>
 <li>Dont forget to support <b>Geniux</b></li>
 </ul>
 	 </p>
@@ -139,7 +139,7 @@
 <b>Terms of Service</b><br/>
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
-<li/>Any feedback/queries: <a href="https://fb.me/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li>
+<li/>Any feedback/queries: <a href="link-error.html" target="_blank"><i class="fa fa-facebook"></i></a></li>
 <li>Dont forget to support <b>Geniux</b></li>
 </ul></p>
 
@@ -196,7 +196,7 @@ it provides a more flexible disk partition principle.<br/><br/>
 <b>Terms of Service</b><br/>
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
-<li/>Any feedback/queries: <a href="https://fb.me/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li>
+<li/>Any feedback/queries: <a href="link-error.html" target="_blank"><i class="fa fa-facebook"></i></a></li>
 <li>Dont forget to support <b>Geniux</b></li>
 </ul>
 	 </p>
@@ -233,7 +233,7 @@ it provides a more flexible disk partition principle.<br/><br/>
 <b>Terms of Service</b><br/>
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
-<li/>Any feedback/queries: <a href="https://fb.me/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li>
+<li/>Any feedback/queries: <a href="link-error.html" target="_blank"><i class="fa fa-facebook"></i></a></li>
 <li>Dont forget to support <b>Geniux</b></li>
 </ul></p>
 
@@ -286,7 +286,7 @@ it provides a more flexible disk partition principle.<br/><br/>
 <b>Terms of Service</b><br/>
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
-<li/>Any feedback/queries: <a href="https://fb.me/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li>
+<li/>Any feedback/queries: <a href="link-error.html" target="_blank"><i class="fa fa-facebook"></i></a></li>
 <li>Dont forget to support <b>Geniux</b></li>
 </ul>
 	 </p>
@@ -327,7 +327,7 @@ it provides a more flexible disk partition principle.<br/><br/>
 <b>Terms of Service</b><br/>
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
-<li/>Any feedback/queries: <a href="https://fb.me/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li>
+<li/>Any feedback/queries: <a href="link-error.html" target="_blank"><i class="fa fa-facebook"></i></a></li>
 <li>Dont forget to support <b>Geniux</b></li>
 </ul></p>
 
@@ -378,7 +378,7 @@ it provides a more flexible disk partition principle.<br/><br/>
 <b>Terms of Service</b><br/>
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
-<li/>Any feedback/queries: <a href="https://fb.me/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li>
+<li/>Any feedback/queries: <a href="link-error.html" target="_blank"><i class="fa fa-facebook"></i></a></li>
 <li>Dont forget to support <b>Geniux</b></li>
 </ul>
 	 </p>
@@ -442,7 +442,7 @@ This way You can easily Update Intel HD Graphics Driver in Windows 7,8,10.
 <b>Terms of Service</b><br/>
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
-<li/>Any feedback/queries: <a href="https://fb.me/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li>
+<li/>Any feedback/queries: <a href="link-error.html" target="_blank"><i class="fa fa-facebook"></i></a></li>
 <li>Dont forget to support <b>Geniux</b></li>
 </ul></p>
 
@@ -489,7 +489,7 @@ Tips for Using Embed for SVG</br/>
 <b>Terms of Service</b><br/>
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
-<li/>Any feedback/queries: <a href="https://fb.me/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li>
+<li/>Any feedback/queries: <a href="link-error.html" target="_blank"><i class="fa fa-facebook"></i></a></li>
 <li>Dont forget to support <b>Geniux</b></li>
 </ul>
 	 </p>
@@ -552,7 +552,7 @@ This way You can easily Update Intel HD Graphics Driver in Windows 7,8,10.
 <b>Terms of Service</b><br/>
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
-<li/>Any feedback/queries: <a href="https://fb.me/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li>
+<li/>Any feedback/queries: <a href="link-error.html" target="_blank"><i class="fa fa-facebook"></i></a></li>
 <li>Dont forget to support <b>Geniux</b></li>
 </ul></p>
 
@@ -600,7 +600,7 @@ Having problems with your DirectX setup? We provide DirectX offline installers f
 <b>Terms of Service</b><br/>
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
-<li/>Any feedback/queries: <a href="https://fb.me/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li>
+<li/>Any feedback/queries: <a href="link-error.html" target="_blank"><i class="fa fa-facebook"></i></a></li>
 <li>Dont forget to support <b>Geniux</b></li>
 </ul></p>
 
@@ -648,7 +648,7 @@ NB: For Educational Purpose<br/><br/>
 <b>Terms of Service</b><br/>
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
-<li/>Any feedback/queries: <a href="https://fb.me/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li>
+<li/>Any feedback/queries: <a href="link-error.html" target="_blank"><i class="fa fa-facebook"></i></a></li>
 <li>Dont forget to support <b>Geniux</b></li>
 </ul></p>
 
@@ -702,7 +702,7 @@ NB: For Educational Purpose<br/><br/>
 <b>Terms of Service</b><br/>
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
-<li/>Any feedback/queries: <a href="https://fb.me/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li>
+<li/>Any feedback/queries: <a href="link-error.html" target="_blank"><i class="fa fa-facebook"></i></a></li>
 <li>Dont forget to support <b>Geniux</b></li>
 </ul></p>
 
