--- a/link-error.html
+++ b/link-error.html
@@ -45,7 +45,7 @@
   <div class="contentBox h100">
   <div>
   <h1 data-aos="fade-up" data-aos-duration="1000" data-aos-delay="0">404 Error</h1>
-  <p data-aos="fade-up" data-aos-duration="1000" data-aos-delay="500"> link-error.html is been terminated, I'm currently resolving the issue. For further Information visit any of my Platforms below. </i></p>
+  <p data-aos="fade-up" data-aos-duration="1000" data-aos-delay="500"> Link is been terminated, I'm currently resolving the issue. For further Information visit any of my Platforms below. </i></p>
     </div>
 </div>
 </div>
@@ -94,7 +94,7 @@
 <img src="images/icons/facebook-like-icon-png-transparent-background-5.png" class="img-fluid">
 </div>
 <div class="content">
-<h3>Facebook<br><span><a href="https://fb.me/theevilgeniux.0" target="_blank">Follow my page</a></span></h3>
+<h3>Facebook<br><span><a href="link-error.html" target="_blank">Follow my page</a></span></h3>
 </div>
 </div>
 </div>
