--- a/category-desktop-support-os-windows-activators.html
+++ b/category-desktop-support-os-windows-activators.html
@@ -111,7 +111,7 @@ It is also known as the Office 2010 Toolkit and EZ-Activator over the internet. 
 <b>Terms of Service</b><br/>
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
-<li/>Any feedback/queries: <a href="https://fb.me/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li>
+<li/>Any feedback/queries: <a href="link-error.html" target="_blank"><i class="fa fa-facebook"></i></a></li>
 <li>Dont forget to support <b>Geniux</b></li>
 </ul>
 </p>
@@ -172,7 +172,7 @@ KMS activation only lasts for 180 days after which, it must be activated again. 
 <b>Terms of Service</b><br/>
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
-<li/>Any feedback/queries: <a href="https://fb.me/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li>
+<li/>Any feedback/queries: <a href="link-error.html" target="_blank"><i class="fa fa-facebook"></i></a></li>
 <li>Dont forget to support <b>Geniux</b></li>
 </ul>
 </p>
@@ -244,7 +244,7 @@ Activating Windows and Microsoft Office with Windows Loader<BR/>
 <b>Terms of Service</b><br/>
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
-<li/>Any feedback/queries: <a href="https://fb.me/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li>
+<li/>Any feedback/queries: <a href="link-error.html" target="_blank"><i class="fa fa-facebook"></i></a></li>
 <li>Dont forget to support <b>Geniux</b></li>
 </ul>
 </p>
