--- a/category-desktop-support-utilities.html
+++ b/category-desktop-support-utilities.html
@@ -63,7 +63,7 @@
 </div>
 <div class="row">
 <div class="col-sm-4">
-<div class="placeBox" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="0">
+<div class="placeBox" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="0" onclick="window.location.href = 'category-desktop-support-operating-systems.html';">
 <div class="imgBx">
 <img src="images/operating-Sytems.jpg" class="img-fluid">
 </div>
@@ -75,7 +75,7 @@
 
 
 <div class="col-sm-4">
-<div class="placeBox" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="500">
+<div class="placeBox" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="500" onclick="window.location.href = 'category-desktop-support-os-windows-activators.html';">
 <div class="imgBx">
 <img src="images/windowspatches.png" class="img-fluid">
 </div>
@@ -89,7 +89,7 @@
 
 
 <div class="col-sm-4">
-<div class="placeBox" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="1000">
+<div class="placeBox" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="1000" onclick="window.location.href = 'category-desktop-support-os-drivers.html';">
 <div class="imgBx">
 <img src="images/drivers.png" class="img-fluid">
 </div>
