--- a/category-desktop-support.html
+++ b/category-desktop-support.html
@@ -63,7 +63,7 @@
 </div>
 <center>
 <div class="col-sm-4">
-<div class="placeBox" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="0">
+<div class="placeBox" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="0" onclick="window.location.href = 'category-windows-tricks-and-tips.html';">
 <div class="imgBx">
 <img src="images/icons/tricks2.png" class="img-fluid">
 </div>
@@ -78,7 +78,7 @@
 </div>
 
 <div class="col-sm-4">
-<div class="placeBox" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="500">
+<div class="placeBox" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="500" onclick="window.location.href = 'category-desktop-support-utilities.html';">
 <div class="imgBx">
 <img src="images/icons/desktoputilities.png" class="img-fluid">
 </div>
