--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ I'm not Talented, I'm skilled.</p>
 </div>
 <div class="row">
 <div class="col-sm-4">
-<div class="placeBox" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="0">
+<div class="placeBox" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="0" onclick="window.location.href = 'category-mobile-tech-support.html';">
 <div class="imgBx">
 <img src="images/icons/smartphone.png" class="img-fluid">
 </div>
@@ -124,7 +124,7 @@ I'm not Talented, I'm skilled.</p>
 
 
 <div class="col-sm-4">
-<div class="placeBox" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="500">
+<div class="placeBox" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="500" onclick="window.location.href = 'category-desktop-support.html';">
 <div class="imgBx">
 <img src="images/icons/windows.png" class="img-fluid">
 </div>
@@ -142,7 +142,7 @@ I'm not Talented, I'm skilled.</p>
 
 
 <div class="col-sm-4">
-<div class="placeBox" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="1000">
+<div class="placeBox" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="1000" onclick="window.location.href = 'lets-connect-my-social-medias.html';">
 <div class="imgBx">
 <img src="images/lets-connect.png" class="img-fluid">
 </div>
