--- a/category-mobile-tech-support.html
+++ b/category-mobile-tech-support.html
@@ -63,7 +63,7 @@
 </div>
 <center>
 <div class="col-sm-4">
-<div class="placeBox" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="0">
+<div class="placeBox" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="0" onclick="window.location.href = 'category-mobile-tech-how-to-tricks-and-tips.html';">
 <div class="imgBx">
 <img src="images/icons/mobile-cracked.png" class="img-fluid">
 </div>
@@ -78,7 +78,7 @@
 </div>
 
 <div class="col-sm-4">
-<div class="placeBox" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="500">
+<div class="placeBox" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="500" onclick="window.location.href = 'category-mobile-tech-support-utility-tools.html';">
 <div class="imgBx">
 <img src="images/icons/android-utilities.png" class="img-fluid">
 </div>
