--- a/category-mobile-tech-support-utility-tools.html
+++ b/category-mobile-tech-support-utility-tools.html
@@ -83,7 +83,7 @@
 <img src="images/icons/generic-Android-app-icon-384x384.png" class="img-fluid">
 </div>
 <div class="content">
-<h3>Google Account Managers<br><span><a href="#myModal1" class="openModal">Download</a></span></h3>
+<h3>Google Managers<br><span><a href="#myModal1" class="openModal">Download</a></span></h3>
 </div>
 </div>
 </div>
