--- a/Specialize-web-developers-online-coder-0-html-overview.html
+++ b/Specialize-web-developers-online-coder-0-html-overview.html
@@ -141,13 +141,13 @@ on Web to develop web pages. makes use of various tags to format the content.
  have their corresponding closing tags. For example, <b>&lt;html&gt;</b> has its closing tag <b>&lt;/html&gt;</b> and
  <b>&lt;body&gt;</b> tag has its closing tag <b>&lt;/body&gt;</b> tag etc.</p>
  <br/>
- <p> Tag & Description<p/>
+ <p data-aos="fade-up" data-aos-duration="1000" data-aos-delay="500"> Tag & Description<p/>
  <tbody data-aos="fade-up" data-aos-duration="1000" data-aos-delay="0">
 <tr>
 <td class="ts" >1</td>
 <td>
 <b>&lt;!DOCTYPE...&gt;</b>
-<p>This tag defines the document type and HTML version.</p>
+<p data-aos="fade-up" data-aos-duration="1000" data-aos-delay="1000">This tag defines the document type and HTML version.</p>
 </td>
 </tr>
 <tr>
