--- a/lets-connect-my-social-medias.html
+++ b/lets-connect-my-social-medias.html
@@ -67,7 +67,7 @@
 
 <div class="row">
 <div class="col-sm-4">
-<div class="placeBox" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="0">
+<div class="placeBox" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="0" onclick="window.location.href = 'https://www.linkedin.com/in/evidence-maphutha-6766b9131/';">
 <div class="imgBx">
 <img src="images/icons/Linked_in_alt.png" class="img-fluid">
 </div>
@@ -78,18 +78,18 @@
 </div>
 
 <div class="col-sm-4">
-<div class="placeBox" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="500">
+<div class="placeBox" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="500" onclick="window.location.href = 'link-error.html';">
 <div class="imgBx">
 <img src="images/icons/Group-icon.png" class="img-fluid">
 </div>
 <div class="content">
-<h3>Chat Room<br><span><a href="https://www.facebook.com/groups/theevilgeniux/" target="_blank">Facebook Group</a></span></h3>
+<h3>Chat Room<br><span><a href="link-error.html" target="_blank">Facebook Group</a></span></h3>
 </div>
 </div>
 </div>
 
 <div class="col-sm-4">
-<div class="placeBox" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="1000">
+<div class="placeBox" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="1000" onclick="link-error.html';">
 <div class="imgBx">
 <img src="images/icons/facebook-like-icon-png-transparent-background-5.png" class="img-fluid">
 </div>
@@ -99,7 +99,7 @@
 </div>
 </div>
 <div class="col-sm-4">
-<div class="placeBox" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="0">
+<div class="placeBox" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="0" onclick="window.location.href = 'https://github.com/theevilgeniux';">
 <div class="imgBx">
 <img src="images/icons/Github-icon.png" class="img-fluid">
 </div>
@@ -109,7 +109,7 @@
 </div>
 </div>
 <div class="col-sm-4">
-<div class="placeBox" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="0">
+<div class="placeBox" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="0" onclick="window.location.href = 'https://www.youtube.com/channel/UCSXkqnImiOzch4LJPLHe1Pw';">
 <div class="imgBx">
 <img src="images/icons/youtube-subscribe-me.png" class="img-fluid">
 </div>
